# fastapi-sql

./: .env.example  docker-compose.yml  pyproject.toml
app/: dev.py  main.py
daos/base/: base_dao.py
daos/user/: relational.py
database/: sql_alchemy.py
handlers/: auth_handler.py  error_handler.py  user_handler.py
models/: user.py
routes/: auth_routes.py  user.py  user_routes.py
schemas/: user.py
tests/fixtures/: database_factory.py  user_factory.py
tests/handlers/: test_user_handler.py
tests/routes/: test_user_routes.py
utils/: exceptions.py  logger.py  security.py
