[tool.poetry]
name = "python-sql"
version = "0.1.0"
description = ""
authors = ["vitor-amartins <vmam@cin.ufpe.br>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.2"
psycopg2-binary = "^2.8.6"
SQLAlchemy = "^1.3.20"
fastapi = "^0.61.2"
async-exit-stack = "^1.0.1"
async_generator = "^1.10"
uvicorn = "^0.12.2"
sentry-sdk = "^0.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
